--- a/Data_Mining.ipynb
+++ b/Data_Mining.ipynb
@@ -19,7 +19,7 @@
           "height": 1000
         },
         "id": "qkeAQ6j4ZBPB",
-        "outputId": "1b76475f-0cd8-460d-a534-437280d499be"
+        "outputId": "c7dd1262-9627-4e05-b2aa-2133ad0811b2"
       },
       "outputs": [
         {
@@ -80,7 +80,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-8-3d855f5a15e7>:31: FutureWarning: \n",
+            "<ipython-input-4-b78e22e693f7>:33: FutureWarning: \n",
             "\n",
             "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
             "\n",
@@ -111,7 +111,9 @@
         "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
         "\n",
         "# Load the dataset\n",
-        "df = pd.read_csv('diabetes.csv')\n",
+        "url = \"https://raw.githubusercontent.com/jbrownlee/Datasets/master/pima-indians-diabetes.data.csv\"\n",
+        "columns = [\"Pregnancies\", \"Glucose\", \"BloodPressure\", \"SkinThickness\", \"Insulin\",\n",
+        "           \"BMI\", \"DiabetesPedigreeFunction\", \"Age\", \"Outcome\"]\n",
         "\n",
         "# Check the first few rows of the dataset\n",
         "print(df.head())\n",
